# AI-meeting-assistant

./: .env  .gitignore  README.md  main.py  meetings_cli.py  pyproject.toml  requirements.txt  setup.py
core/: audio_capture.py  config.py  pipeline.py  transcriber.py
processors/: keypoint_processor.py  llm_engine.py  question_processor.py  summary_processor.py  topic_segmenter.py
storage/: meeting_models.py  meeting_store.py
