[project]
name = "ai-meeting-assistant"
version = "0.1.0"
description = "Offline AI Meeting Assistant"
requires-python = ">=3.11"
dependencies = [
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "faster-whisper>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "llama-cpp-python>=0.2.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "processors*", "storage*", "ui*"]
exclude = ["tests*", "models*"]
